still attempting to prevent scroll on ios

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@ body {
 
   overflow: hidden;
   overflow-x:hidden;
+
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
+  position: fixed;
 }
 
 main {
